# System-Monitor

./: .dockerignore  CMakeLists.txt  DOCKER_README.md  Dockerfile  docker-compose.yml  report.md
include/: hybridalgo.h
src/: ncurses_display.cpp
tests/: INTEGRATION_TEST_LOGIC.md  README.md  integration_test.cpp
